--- a/Tables/CSS/style.css
+++ b/Tables/CSS/style.css
@@ -21,7 +21,7 @@ caption {
 button {
     margin: 5px 5px 10px 5px;
     padding: 6px 12px;
-   
+
     font-size: 15px;
 }
 
@@ -41,4 +41,59 @@ th {
 
 tfoot {
     background-color: lightgray;
+}
+
+@media print {
+    * {
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+    }
+
+    button {
+
+        display: none;
+    }
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modalContent {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    width: 300px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.modalContent label,
+input {
+display: block;
+margin-top: 5px;
+}
+
+input {
+margin: 10px auto;
+padding: 10px;
+border: 2px solid;
+border-radius: 10px;
+font-size: 18px;
+}
+
+#cancelBtn{
+background-color: red;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
