--- a/Tables/CSS/style.css
+++ b/Tables/CSS/style.css
@@ -10,6 +10,9 @@ body {
     text-align: center;
     height: 100vh;
 }
+h1 {
+    font-size: 48px; /* or try 48px, 3em, etc. */
+}
 
 caption {
     font-size: 24px;
@@ -20,10 +23,21 @@ caption {
 
 button {
     margin: 5px 5px 10px 5px;
-    padding: 6px 12px;
-
-    font-size: 15px;
+    padding: 9px 17px;
+    font-size: 20px;
+    background-color: #28a745; 
+    color: white;
+    border: none;
+    border-radius: 5px; 
+    cursor: pointer;
+    transition: transform 0.1s ease, background-color 0.2s ease;
 }
+
+button:active {
+    transform: translateY(2px); 
+    background-color: #218838; 
+}
+
 
 thead th {
     background-color: black;
@@ -69,9 +83,19 @@ tfoot {
     background-color: #fff;
     margin: 10% auto;
     padding: 20px;
-    width: 300px;
+    width: 400px;
     border-radius: 10px;
     text-align: center;
+    animation: fadingContent 1s ease;
+}
+
+@keyframes fadingContent{
+    from{
+        transform: scale(0.2);
+    }
+    to{
+        transform: scale(1);
+    }
 }
 
 .modalContent label,
@@ -86,6 +110,10 @@ padding: 10px;
 border: 2px solid;
 border-radius: 10px;
 font-size: 18px;
+}
+
+input:focus {
+    background-color: #f0f0f0; /* light gray */
 }
 
 #cancelBtn{
