--- a/Tables/CSS/style.css
+++ b/Tables/CSS/style.css
@@ -113,7 +113,7 @@ font-size: 18px;
 }
 
 input:focus {
-    background-color: #f0f0f0; /* light gray */
+    background-color: #f0f0f0; 
 }
 
 #cancelBtn{
